styles/styles.css
/* Import Akzidenz Grotesque Light, Light Italic, and Regular and Avenue X */

@font-face {
   font-family: 'akzidenzLt';
   src: url(../fonts/akzidenz/AkzidenzGroteskPro-Light.ttf);
 }

 @font-face {
   font-family: 'akzidenzLtIt';
   src: url(../fonts/akzidenz/AkzidenzGroteskPro-LightIt.ttf);
 }

 @font-face {
   font-family: 'akzidenzReg';
   src: url(../fonts/akzidenz/AkzidenzGroteskPro-Regular.ttf);
 }

 @font-face {
   font-family: 'avenuex';
   src: url(../fonts/avenue/Avenue\ X.otf);
 }

/* Set variables */

:root{
   --black: #241f21;
   --white: #f7f7f7;
   --aqua: #8af5f2;
   --blue: #5c08ff;
   --green: #46F498;
   --yellow: #f5eb4a;
   --border: 1px solid var(--black);
}

/* general styles for the whole site ---------------------------------------------- */

body{
   margin: 0;
   background: var(--white);
   scroll-behavior: smooth;
}

#customCursor{
   position: fixed;
   width: 2.8rem;
   pointer-events: none;
}

h1{
   font-family: 'avenuex';
   text-transform: uppercase;
   font-size: 1.65em;
   letter-spacing: .02em;
   word-spacing: -0.28em;
}

.c-scrollbar_thumb{
   background: var(--white);
   border: 2px solid var(--black);
   opacity: 1;
}

h2{
   font-family: 'akzidenzLtIt';
   text-transform: uppercase;
   letter-spacing: 0.08em;
   font-size: 1.4rem;
}

p{
   font-family: 'akzidenzReg';
   font-size: 0.84em;
}

a{
   font-family: 'akzidenzReg'; 
   font-family: 'akzidenzLtIt';
   font-size: 1em;
   color: var(--black);
}

::selection{
   color: var(--white);
   background: var(--black);
}

#menuBtnWrap{
   position: absolute;
   top: 1.5vw;
   right: 1.5vw;
   z-index: 100;
}

#menuBtn{
   width: 33px;
   height: 33px;
   position: relative;
   cursor: pointer;
   transition: all 0.2s;
}

.menuLink{
   border: 2px solid var(--black);
   padding: 0px 15px;
   margin-bottom: 15px;
   width: 30vw;
   transition: all .5s ease-out;
   min-width: 250px;
   background: var(--white);
}

.menuLink > h1{
   transition: all .5s ease-out;
   margin-top: 0.83em;
}

.verticalWrap, .horizontalWrap{
   display: flex;
   position: absolute;
   top: 0;
   left: 0;
   justify-content: space-evenly;
   width: 33px;
   height: 33px;
   align-items: center;
}

.horizontalWrap{
   transform: rotate(90deg);
}

.horizontalWrap2{
   transform: rotate(-90deg);
}

.verticalWrap2{
   transform: rotate(180deg);
}

.verticalWrap > span, .horizontalWrap > span{
   background: var(--black);
   width: 3px;
   height: 33px;
   display: inline-block;
   border-radius: 0px;
   transition: all 0.5s ease-in-out; 
}

@media (hover: hover) {

   .menuLink:hover{
      transform: skewX(-25deg) scaleX(1.1);
   }
   
   .menuLink:first-child:hover{
      background: linear-gradient(90deg, rgb(255, 255, 255) 0%, rgba(92,8,255,1) 100%);
   }
   
   .menuLink:nth-child(2):hover{
      background: linear-gradient(90deg, rgb(255, 255, 255) 0%, rgba(138,245,242,1) 100%);
   }
   
   .menuLink:nth-child(3):hover{
      background: linear-gradient(90deg, rgb(255, 255, 255) 0%, rgba(70,244,152,1) 100%);
   }
   
   .menuLink:nth-child(4):hover{
      background: linear-gradient(90deg, rgb(255, 255, 255) 0%, rgba(245,235,74,1) 100%);
   }

   .menuLink:hover > h1{
      transform: skewX(24deg) scaleX(0.9);
   }

   #menuBtn:hover > .verticalWrap > span, #menuBtn:hover > .horizontalWrap > span{
      border-radius: 10px;
      transform: scaleY(0.1);
      background: var(--blue);
   }
 }

 @media (max-width: 1035px) {
   #menuBtnWrap{
      top: 4vw;
      right: 4vw;
   }
   
   #menuBtn{
      width: 33px;
      height: 33px;
   }
   
   .verticalWrap, .horizontalWrap{
      width: 33px;
      height: 33px;
   }
   
   .verticalWrap > span, .horizontalWrap > span{
      width: 3px;
      height: 33px;
   }
   
}

@media (max-width: 480px) {
   #menuBtnWrap{
      top: 5vw;
      right: 5vw;
   }
}

#menuWrap{
   width: 100vw;
   height: 100vh;
   background: var(--white);
   position: fixed;
   top: 0;
   left: 0;
   z-index: 10;
   display: grid;
   place-content: center;
   transform: translateX(100%);
   transition: 0.7s cubic-bezier(.54,0,.83,.36);
   border-left: 2px solid var(--black);
   display: none;
}

/* individual styles ---------------------------------------------- */

#individualPageWrap{
   width: 94vw;
   display: flex;
   flex-wrap: wrap;
   align-content: stretch;
   border-right: var(--border);
   justify-content: space-around;
}

.posterLinksWrap{
   height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   flex-grow: 10;
   flex-shrink: 5;
   box-sizing: border-box;
   min-width: 30vw;
   border-bottom: none;
   border-right: 1px solid var(--black);
}

.backLink{
   position: absolute;
   top: 20px;
   left: 20px;
}

.workWrap{
   display: flex;
   flex-wrap: wrap;
   height: 100vh;
   width: 100vh;
}

.topWork, .bottomWork{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
}

.work1, .work2, .work3, .bio{
   border: var(--border);
   width: 50vh;
   height: 50vh;
   box-sizing: border-box;
   position: relative;
}

.bio{
   display: grid;
   place-content: center;
}

#bio{
   max-width: 75%;
   margin-left: auto;
   margin-right: auto;
}

#work1, #work2, #work3{
   width: 100%;
}

.coverImg{
   opacity: 0;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   z-index: -10;
}

@media (hover: hover) {
   .coverImg{
      opacity: 1;
      z-index: 10;
   }

   .coverImg:hover{
      opacity: 0;
   }
}

#name{
   margin-top: 0;
}

#poster{
   width: 20vw;
   border: var(--border);
}

.linksWrap{
   width: 20vw;
}

#insta > img, #linkedin > img{
   width: 30px;
   margin-top: 10px;
   cursor: pointer;
}

#personNavWrap{
   height: 100vh;
   display: flex;
}

#previousNav, #nextNav{
   width: 50vw;
   box-sizing: border-box;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 8vw;
   border: var(--border);
   cursor: pointer;
   padding-top: 5vh;
}

#previousImg{
   margin-left: auto;
}

#previousName{
   text-align: right;
}

.navPreviewImg{
   width: 4vw;
   display: block;
   margin-bottom: 5vh;
}

#prevBtn, #nextBtn{
   width: 2vw;
   display: block;
}

@media (max-width: 1035px) {
   #individualPageWrap{
      padding-bottom: 200px;
      border-right: none;
   }

   .posterLinksWrap{
      border-right: none;
   }

   #poster, .linksWrap{
      width: 30vw;
   }
   
}

@media (max-width: 949px) {
   #individualPageWrap{
      justify-content: space-around;
      padding-bottom: 200px;
      width: 100vw;
      margin-top: 45px;
   }

   #nextBtn, #prevBtn{
      width: 3vw;
   }

   .navPreviewImg{
      width: 6vw;
   }

   .backLink{
      top: 0;
   }
}

@media (max-width: 705px) {
   .workWrap{
      height: max-content;
   }

   .work1, .work2, .work3, .bio{
      margin-top: 25px;
      height: 60vw;
      width: 60vw;
   }

   .topWork, .bottomWork{
      justify-content: space-around;
   }

   #individualPageWrap{
      justify-content: space-around;
      padding-bottom: 200px;
      margin-top: 35px;
   }

   #poster, .linksWrap{
      width: 50vh;
      max-width: 75%;
   }
}

@media (max-width: 564px) {

   .work1, .work2, .work3, .bio{
      margin-top: 25px;
      height: 75vw;
      width: 75vw;
   }

   h1{
      letter-spacing: -.03em;
   }

   #personNavWrap{
      height: 35vh;
   }

   .navPreviewImg{
      width: 10vw;
   }

   #nextBtn, #prevBtn{
      width: 5vw;
   }

   h2{
      font-size: 1.1rem;
   }
}

/* schedule styles ---------------------------------------------- */

#schedulePageWrap{
   width: 94vw;
   display: flex;
   flex-wrap: nowrap;
   border-right: var(--border);
   justify-content: space-around;
}

#schedulePageWrap h1{
    padding-bottom: 30px;
}

#joinUs{
    width: 70vw;
    border-right: var(--border);
    background-image: linear-gradient(var(--yellow), var(--green), var(--aqua));
    position: relative;
}

#joinUsSticky{
   position: absolute;
   top: 0;
   right: 0;
   left: 0;
   height: 100%;
}

#joinUsContent{
    margin-left: 20%;
    margin-right: 20%;
    margin-top: 80px;
}

#Monday{
    margin-left: 12%;
    margin-right: 12%;
    margin-top: 80px;
    padding-left: 75px;
}

#Tuesday{
    margin-left: 12%;
    margin-right: 12%;
    margin-top: 55px;
    padding-left: 75px;
}

.scheduleRow{
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    flex-wrap: nowrap;
    margin-left: 12%;
    margin-right: 12%;
    margin-top: 35px;
    margin-bottom: 35px;
}

.time{
    margin-right: 30px;
    font-weight: bolder;
}

.personName{
    font-weight: bolder;
}

.projectTitle{
    font-family: 'akzidenzLtIt';
}

.tag{
    padding-top: 2px;
    padding-bottom: 2px;
    padding-left: 5px;
    padding-right: 5px;
    margin-right: 5px;
    margin-bottom: 5px;
    background-color: var(--black);
    color: var(--white);
    display: inline-flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: flex-start;
    width: max-content;
}

#endMonday{
    padding-bottom: 40px;
    border-bottom: var(--border);
}

#endTuesday{
   margin-bottom: 0;
}

.stencil{
   width: 100%;
}

.stencil > img{
   width: 100%;
}

@media (max-width: 1120px) {
    
    #schedulePageWrap{
       flex-wrap: wrap;
       border-right: none;
    }
    
    #joinUs{
        width: 100%;
        border-bottom: var(--border);
        border-right: none;
        background-image: linear-gradient(var(--yellow), var(--green));
    }
    
    #joinUsContent{
        margin-left: 12%;
        margin-right: 12%;
        padding-left: 75px;
        padding-right: 75px;
        margin-bottom: 80px;
    }
    
    #joinUsSticky{
      height: 70%;
   }
    
}

@media (max-width: 1035px) {
    
    #schedulePageWrap{
       width: 100%;
    }
    
    #joinUs{
        width: 100%;
        border-bottom: var(--border);
        border-right: none;
        background-image: linear-gradient(var(--yellow), var(--green));
    }
    
}

@media (max-width: 800px) {
    
    #joinUsContent{
        margin-left: 8%;
        margin-right: 8%;
        padding-left: 10px;
        padding-right: 10px;

    }
    
    #Monday{
        margin-left: 8%;
        margin-right: 8%;
    }
    
    .scheduleRow{
        margin-left: 8%;
        margin-right: 7%;
    }
    
    #endTuesday{
        padding-bottom: 20px;
    }
    
}

